--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,22 @@
   pointer-events: none;
 }
 
+nav{
+ display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+  padding: 30px;
+  padding-right: 100px;
+}
+
+nav a{
+  text-decoration: none;
+}
+nav a.active{
+  color: white;
+  background-color: #61dafb;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
